<resources>


    <string name="title_activity_loading">Loading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">test</string>
    <string name="objective">Objective</string>
    <string name="full_name">Your Full Name</string>
    <string name="homepagead">ca-app-pub-2342189677319514/1490934981</string>
    <string name="templatespagead">ca-app-pub-2342189677319514/2967668185</string>
    <string name="statspagead">ca-app-pub-2342189677319514/4444401382</string>
    <string-array name="dropdownItems">
        <item>--Select Highest Education--</item>
        <item>10th</item>
        <item>12th(High School)</item>
        <item>Diploma(10 + 3)</item>
        <item>Under Graduate</item>
        <item>Post Graduate</item>

    </string-array>
    <string-array name="templates">
        <item>Default</item>
        <item>NMIMS</item>
        <item>Harvard</item>
    </string-array>

    <string-array name="colors">
        <item>#EF9A9A</item>
        <item>#9FA8DA</item>
        <item>#FFE082</item>
    </string-array>
    <string-array name="temps">
        <item>harvard</item>
        <item>nmims</item>
        <item>default</item>
    </string-array>
    <string-array name="redCols">
        <item>#D32F2F</item>
        <item>#C62828</item>
        <item>#F44336</item>
    </string-array>
    <string-array name="pinkCols">
        <item>#C2185B</item>
        <item>#AD1457</item>
        <item>#E91E63</item>
    </string-array>
    <string-array name="purpleCols">
        <item>#512DA8</item>
        <item>#4527A0</item>
        <item>#673AB7</item>
    </string-array>
    <string-array name="indigoCols">
        <item>#303F9F</item>
        <item>#283593</item>
        <item>#3F51B5</item>
    </string-array>
    <string-array name="greenCols">
        <item>#00796B</item>
        <item>#00695C</item>
        <item>#009688</item>
    </string-array>
    <string-array name="yellowCols">
        <item>#FFA000</item>
        <item>#FF8F00</item>
        <item>#FFC107</item>
    </string-array>
    <string-array name="orangeCols">
        <item>#E64A19</item>
        <item>#D84315</item>
        <item>#FF5722</item>
    </string-array>
    <string-array name="greyCols">
        <item>#455A64</item>
        <item>#37474F</item>
        <item>#607D8B</item>
    </string-array>

    <string-array name="themeColors">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Grey</item>

    </string-array>





    <string name="app_name">CV Maker</string>

    <!-- HOME TAB -->
    <string name="homeTabHint">Use the \'+\' button to create a CV</string>

    <!-- MAIN ACTIVITY -->
    <string name="adText">View an ad to support the developer(Click here)</string>

    <!-- HOME TAB NAMES -->
    <string name="tabNameHome">HOME</string>
    <string name="tabNameTemplate">TEMPLATES</string>
    <string name="tabNameFeedback">FEEDBACK</string>
    <string name="deleteWarning">Item will be deleted</string>
    <string name="deleteSnackbarButton">CONFIRM</string>

    <!-- TUTORIAL STRINGS -->
    <string name="tutorialOptionsMenuTitle">New Menu Options</string>
    <string name="tutorialOptionsMenuContent">Check out the new menu options</string>

    <string name="tutorialFABTitle">Get Started</string>
    <string name="tutorialFABContent">Click here to create a new CV</string>

    <string name="tutorialInteractTitle">New ways to interact</string>
    <string name="tutorialInteractContent">Click on it to open the PDF\nClick and hold to edit\nSwipe right to delete</string>

    <!-- MENU OPTIONS -->
    <string name="menuChangeTheme">Change Theme</string>
    <string name="menuRateUs">Rate Us</string>
    <string name="menuHelp">Help</string>
    <string name="menuTut">Enable Tutorial</string>

    <!-- FEEDBACK TAB -->
    <string name="feedbackHintName">Name</string>
    <string name="feedbackHintEmail">Email Address</string>
    <string name="feedbackHintComment">Comment</string>
    <string name="feedbackBtSubmitText">SUBMIT</string>
    <string name="featureRequest">If you would like to request a feature or a CV template please email us at nksystems12@gmail.com</string>

    <!-- HELP ACTIVITY -->
    <string name="help1">Thank You for downloading CV Maker, things have changed a little since our last publish.</string>
    <string name="help2">First things first, your main screen looks a little different.</string>
    <string name="help3">You can click on the list to open your pdf file or click and hold to edit your details.</string>
    <string name="help4">Use the templates tab to see existing templates, and use the feedback tab to send feedback directly to us</string>
    <string name="help5">You now have a few options in the menu, feel free to explore and change the theme to something you enjoy.</string>
    <string name="help6">For example, picking pink as your theme...</string>
    <string name="help7">Use the + button to start making a new CV.</string>
    <string name="help8">Swipe left or right in the form to change sections, the bottom indicator will show your progress as you swipe.</string>
    <string name="help9">You can also swipe right on your CV to delete it \nNOTE: The pdf file will still exist in your storage.</string>
    <string name="help10">If you ever want to read this help again, use the \'Help\' option in the menu.</string>
    <string name="helpButton">Return to Menu</string>

    <!-- RESUME PAGE HEADERS -->
    <string-array name="resumePages">
        <item>Personal Information (1/9)</item>
        <item>Education Details (2/9)</item>
        <item>Certification (3/9)</item>
        <item>Experience (4/9)</item>
        <item>Achievements (5/9)</item>
        <item>Skills (6/9)</item>
        <item>Extra Curricular (7/9)</item>
        <item>Personal Interests (8/9)</item>
        <item>Photo Upload (9/9)</item>
    </string-array>

    <!-- PERSONAL DETAILS -->
    <string name="personalFilename">Filename</string>
    <string name="personalObjective">Objective</string>
    <string-array name="title">
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>
        <item>Dr.</item>
    </string-array>
    <string name="personalFName">First Name</string>
    <string name="personalLName">Last Name</string>
    <string name="personalEmail">Email</string>
    <string name="personalAddress">Address</string>


    <!-- EDUCATION -->
    <string name="CGPA">CGPA/Percentage of passing</string>
    <string name="educationSchool">School/Institute</string>
    <string name="educationBoard">Board</string>
    <string name="year">Year of passing</string>
    <string name="collegeName">College Name</string>
    <string name="degree">Degree</string>

    <!-- CERTIFICATION -->
    <string name="certificationTitle">Certification Title</string>
    <string name="certificationYear">Certification Year</string>

    <!-- EXPERIENCE -->
    <string name="companyName">Company Name</string>
    <string name="duration">Duration Ex. Oct 2013 - Ongoing</string>
    <string name="role">Role/Designation</string>
    <string name="jobDescription">Description</string>

    <!-- ACHHIEVES -->
    <string name="achieve1">Achievement 1</string>
    <string name="achieve2">Achievement 2</string>
    <string name="achieve3">Achievement 3</string>
    <string name="achieve4">Achievement 4</string>
    <string name="achieve5">Achievement 5</string>
    <string name="achieve6">Achievement 6</string>

    <!-- SKILLS -->
    <string name="skillTitle">Ex. Languages</string>
    <string name="skillinfo">JAVA,C++</string>

    <!-- EXTRA -->
    <string name="ec1">Activity 1</string>
    <string name="ec2">Activity 2</string>
    <string name="ec3">Activity 3</string>
    <string name="ec4">Activity 4</string>
    <string name="ec5">Activity 5</string>
    <string name="ec6">Activity 6</string>

    <string name="personalInterest">Personal Interests/Hobbies</string>
    <string name="photoButton">Select Image</string>
    <string name="photoRemove">Remove Photo</string>
    <string name="photoNote">NOTE: The picture works best with a square image. Best performance is gained by using 200x200 images.</string>


    <string name="feedbackAllWarning">All fields are mandatory.</string>
    <string name="feedbackEmailWarning">Please enter a valid email.</string>
    <string name="feedbackSuccess">Message successfully sent!</string>
    <string name="feedbackFailure">There was some error in sending message. Please try again after some time.</string>
    <string name="resumeBackWarning">You will lose any unsaved data.\nPress the back button to go back anyways.</string>
    <string name="resumeEmailWarning">Enter Valid Birthdate</string>
    <string name="resumePersonalWarning">Filename/Personal details are mandatory</string>

</resources>
