<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor"
    tools:context="nksystems.cvmaker.StatisticsTab">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackHintName"
                android:inputType="textCapWords"
                android:id="@+id/etName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackHintEmail"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:id="@+id/etEmail"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etComment"
                android:hint="@string/feedbackHintComment"
                android:inputType="textMultiLine|textCapSentences"
                android:nestedScrollingEnabled="true"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedbackBtSubmitText"
                android:id="@+id/btnSave"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/featureRequest"
                android:textStyle="bold|italic"
                android:padding="5dp"
                />



        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:id="@+id/progressBar"

        />




    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:id="@+id/homeAdview"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/statspagead"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
